src/components/header/header.styles.scss
@import '../../design/variables';

.header {
  position: fixed;
  width: 100%;
  height: 80px;
  display:flex;
  justify-content: space-between;
  align-items: center;
  border: solid 1px light-grey;
  background-color: white;



  .left *, .options *{
    margin: 20px;
  }
  .title {
    font-family: $title-font;
    color: $green;
  }
}

